@startuml classdiagram

Title Game
namespace UnityBuild{
    class Monobehavior{
        +void Start()
        +void FixedUpdate()
    }
    class Vector3{

    }
    class Transform{

    }
}



class Player{

    + void Move()
    + void moisePos()
    + void look()
    + void HPChange()

}

abstract class Entity{
    - Health
    - Damage
    - Movespeed
    + void TakeDamage(float _damage)
    + void Cooldown()
    + void Die()

}
abstract class Enemy{
    + void Attack()
    + void track()
    + void Move()
    + NavMeshAgent
}

class Ranged{

}
class Highlander{

}
class Spawner{

}

class PlayerShield{
    + void ThrowShield()
    + void RecallShield()
}


abstract class Buffs{
    + void destroyBuffs()
    + void OnTriggerEnter()

}

class SpeedUP{
    + void SpeedUP()
}
class DamageUP{
    + void DamageUP()
}
class HealthUP{
    + void HealthUP()
}
class RecoilUP{
    + void RecoilUP()
}

class LevelSystem{
    + void LevelUP()
    + void trackLevel()
    + void trackTime()
    + void SpawnAtRandomPosition()
    + void SpawnBuffs()
    + void SpawnEnemies()
}

class Bullets {
    + void OnTriggerEnter()
    + void DestroyBullet()
    + void ChangeObject()
}
class Spawnlings{
    + void OnTriggerEnter()
    + void DestroySpawnlings()
    + void TrackPlayer()
}
class Sword{
    + void OnTriggerEnter()
    + void DestroySword()
}

Enemy -up-|> Entity
Player -up-|> Entity
Enemy <|-- Ranged
Enemy <|-- Highlander
Enemy <|-- Spawner
Entity -up-|> UnityBuild.Monobehavior
Entity -up-|> UnityBuild.Vector3
Entity -up-|> UnityBuild.Transform
Buffs -up-|> UnityBuild.Monobehavior
Buffs -up-|> UnityBuild.Vector3
Buffs -up-|> UnityBuild.Transform
Player -> PlayerShield
Sword -up-> Highlander
Bullets -up-> Ranged
Spawnlings -up-> Spawner
DamageUP -up-|> Buffs
SpeedUP -up-|> Buffs
HealthUP -up-|> Buffs
RecoilUP -up-|> Buffs
HealthUP -down-> LevelSystem
SpeedUP -down-> LevelSystem
DamageUP -down-> LevelSystem
RecoilUP -down-> LevelSystem
Highlander -down-> LevelSystem
Ranged -down-> LevelSystem
Spawner -down-> LevelSystem
@enduml